# AI_HR

./: .env.example  .gitignore  README.md  ai.ipynb  ai.py  ai_screening.py  config.py  database.py  dependencies.py  exceptions_handler.py  generate_questions.py  logger.py  main.py  models.py  parsing_cv.py  primary_seletion.py  pyproject.toml  requirements.txt  security.py  stt.py  tts.py  tts_edge.py
AI HR/: package.json
alembic/: env.py
alembic/versions/: 2025_08_31_1545-9068493b04d4_create_admin.py  2025_09_03_0331-2342d36f9e1a_initial.py  2025_09_05_1443-ebca14f6087d_add_question_table.py
api/: __init__.py  auth.py  candidate.py  interview.py  resume.py  rtc_router.py  static_router.py  vacancy.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: axios.js
frontend/src/components/: AiButton.jsx  Header.css  Header.jsx  Home.css  Home.jsx
frontend/src/pages/: Login.css  Login.jsx  Result.css  Result.jsx  Screening.css  Screening.jsx  Vacancies.css  Vacancies.jsx  VacancyDetail.css  VacancyDetail.jsx
llm/: __init__.py  llm.py
resources/: prompts.py
rtc/: rtc.py
schemas/: __init__.py  candidate.py  candidate_resp.py  interview.py  resume.py  resume_resp.py  rtc.py  token.py  user.py  vacancy.py  vacancy_resp.py
services/: __init__.py  candidate_service.py  interview_service.py  questions_service.py  resume_service.py  token_service.py  user_service.py  vacancy_service.py
static/: index.html
use_cases/: __init__.py  resume.py  token.py  user.py
(+1 files in other folders)
