[project]
name = "ai-hr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiortc>=1.13.0",
    "av>=14.4.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "numpy>=2.2.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "soundfile>=0.13.1",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "llvmlite>=0.42.0",
    "numba==0.61.2",
    "scipy>=1.16.1",
]
